# assignment-checker

./: .gitignore  Cargo.toml  go.mod  go.sum  main.go
.cargo/: config.toml
cmd/: root.go
src/: arguments.rs  authentication.rs  constants.rs  files.rs  lib.rs  main.rs
stages/: constants.go  run.go  upload.go  validation.go
